--- a/template/index.html
+++ b/template/index.html
@@ -18,25 +18,28 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <a class="navbar-brand" href="#">
-      <span class="menu-collapsed">Intern</span>
+      <span class="menu-collapsed">Project Management System</span>
     </a>
     <div class="collapse navbar-collapse" id="navbarAdmin">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#top"> Registrieren</a>
+          <a class="nav-link" href="#top">Acount</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#top"> Login</a>
+          <a class="nav-link" href="#top">Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#top">Logout</a>
         </li>
         <!-- Dieses Menü ist bei größeren Geräten mit d-sm-none ausgeblendet.
               Die Seitenleiste ist nicht für kleinere Bildschirme geeignet, daher kann dieses Dropdown-Menü alle nützlichen Seitenleisten-Elemente ausschließlich für kleinere Bildschirme enthalten -->
         <li class="nav-item dropdown d-sm-block d-md-none">
           <a class="nav-link dropdown-toggle" href="#" id="smallerscreenmenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Menu </a>
           <div class="dropdown-menu" aria-labelledby="smallerscreenmenu">
-            <a class="dropdown-item" href="#top">Dashboard</a>
-            <a class="dropdown-item" href="#top">Profile</a>
-            <a class="dropdown-item" href="#top">Tasks</a>
-            <a class="dropdown-item" href="#top">Etc..</a>
+            <a class="dropdown-item" href="#top">Project manager</a>
+            <a class="dropdown-item" href="#top">Employee manager</a>
+            <!-- <a class="dropdown-item" href="#top">Tasks</a>
+            <a class="dropdown-item" href="#top">Etc..</a> -->
           </div>
         </li><!-- Menü für kleinere Geräte END -->
       </ul>
@@ -58,53 +61,73 @@
         <a href="#submenu1" data-toggle="collapse" aria-expanded="false" class="bg-dark list-group-item list-group-item-action flex-column align-items-start">
           <div class="d-flex w-100 justyfy-content-start align-items-center">
             <span class="fas fa-tachometer-alt fa-fw mr-3"></span>
-            <span class="menu-collapsed">Dashboard</span>
+            <span class="menu-collapsed">Project manager</span>
             <span class="fas fa-angle-down ml-auto"></span>
           </div>
         </a>
         <!-- Inhalt des Untermenüs -->
         <div id="submenu1" class="collapse sidebar-submenu">
           <a href="#" class="list-group-item list-group-item-action bg-dark text-white">
-            <span class="menu-collapsed">Charts</span>
+            <span class="menu-collapsed">Add Project</span>
           </a>
           <a href="#" class="list-group-item list-group-item-action bg-dark text-white">
-            <span class="menu-collapsed">Reports</span>
+            <span class="menu-collapsed">Manager</span>
           </a>
-          <a href="#" class="list-group-item list-group-item-action bg-dark text-white">
+          <!-- <a href="#" class="list-group-item list-group-item-action bg-dark text-white">
             <span class="menu-collapsed">Tables</span>
-          </a>
+          </a> -->
         </div>
         <a href="#submenu2" data-toggle="collapse" aria-expanded="false" class="bg-dark list-group-item list-group-item-action flex-column align-items-start">
           <div class="d-flex w-100 justify-content-start align-items-center">
            <span class="fas fa-user fa-fw mr-3"></span>
-           <span class="menu-collapsed">Profile</span>
+           <span class="menu-collapsed">Employee manager</span>
            <span class="fas fa-angle-down ml-auto"></span>
           </div>
          </a>
         <!-- Inhalt des Untermenüs -->
         <div id='submenu2' class="collapse sidebar-submenu">
                   <a href="#" class="list-group-item list-group-item-action bg-dark text-white">
-                      <span class="menu-collapsed">Settings</span>
+                      <span class="menu-collapsed">Add</span>
                   </a>
                   <a href="#" class="list-group-item list-group-item-action bg-dark text-white">
-                      <span class="menu-collapsed">Password</span>
+                      <span class="menu-collapsed">List User</span>
                   </a>
               </div>
-              <a href="#" class="bg-dark list-group-item list-group-item-action">
+
+              <!-- <a href="#" class="bg-dark list-group-item list-group-item-action">
                   <div class="d-flex w-100 justify-content-start align-items-center">
                       <span class="fas fa-tasks fa-fw mr-3"></span>
                       <span class="menu-collapsed">Tasks</span>
                   </div>
-              </a>
+              </a> -->
+
+              <a href="#submenu3" data-toggle="collapse" aria-expanded="false" class="bg-dark list-group-item list-group-item-action flex-column align-items-start">
+                <div class="d-flex w-100 justify-content-start align-items-center">
+                 <span class="fas fa-user fa-fw mr-3"></span>
+                 <span class="menu-collapsed">nhân viên</span>
+                 <span class="fas fa-angle-down ml-auto"></span>
+                </div>
+               </a>
+
+               <div id='submenu3' class="collapse sidebar-submenu">
+                <a href="#" class="list-group-item list-group-item-action bg-dark text-white">
+                    <span class="menu-collapsed">project</span>
+                </a>
+                <a href="#" class="list-group-item list-group-item-action bg-dark text-white">
+                    <span class="menu-collapsed">task</span>
+                </a>
+              </div>
+
+
               <!-- Separator with title -->
               <li class="list-group-item sidebar-separator-title text-muted d-flex align-items-center menu-collapsed">
                   <small>OPTIONS</small>
               </li>
               <!-- /END Separator -->
-              <a href="#" class="bg-dark list-group-item list-group-item-action">
+              <!-- <a href="#" class="bg-dark list-group-item list-group-item-action">
                   <div class="d-flex w-100 justify-content-start align-items-center">
                       <span class="fas fa-calendar fa-fw mr-3"></span>
-                      <span class="menu-collapsed">Calendar</span>
+                      <span class="menu-collapsed">Acount</span>
                   </div>
               </a>
               <a href="#" class="bg-dark list-group-item list-group-item-action">
@@ -112,7 +135,7 @@
                       <span class="far fa-envelope fa-fw mr-3"></span>
                       <span class="menu-collapsed">Messages <span class="badge badge-pill badge-primary ml-2">5</span></span>
                   </div>
-              </a>
+              </a> -->
               <!-- Separator without title -->
               <li class="list-group-item sidebar-separator menu-collapsed"></li>
               <!-- /END Separator -->
@@ -122,12 +145,12 @@
                       <span class="menu-collapsed">Help</span>
                   </div>
               </a>
-              <a href="#top" data-toggle="sidebar-colapse" class="bg-dark list-group-item list-group-item-action d-flex align-items-center">
+              <!-- <a href="#top" data-toggle="sidebar-colapse" class="bg-dark list-group-item list-group-item-action d-flex align-items-center">
                   <div class="d-flex w-100 justify-content-start align-items-center">
                       <span id="collapse-icon" class="fa fa-2x mr-3"></span>
                       <span id="collapse-text" class="menu-collapsed">Collapse</span>
                   </div>
-              </a>
+              </a> -->
       </ul><!-- List Group END-->
     </div> <!-- Seitenleiste-container END -->
     <!-- MAIN -->
