--- a/template/project-details.html
+++ b/template/project-details.html
@@ -8,12 +8,13 @@
     
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="/project-details.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
 </head>
-  <body>
-      <!-- Bootstrap NavBar -->
+<html>
+<body>
+          <!-- Bootstrap NavBar -->
 <nav class="navbar navbar-expand-md navbar-dark bg-primary">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarAdmin" aria-controls="navbarAdmin" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -154,34 +155,63 @@
               </a> -->
       </ul><!-- List Group END-->
     </div> <!-- Seitenleiste-container END -->
+    <div class="container m-4">
+        <h1 >Project's Name</h1>
+        <div class="page-todo bootstrap snippets bootdeys">
+            <div class="col tasks">
+                <div class="task-list">
+                    <h3>Tasks of this project</h3>
+                    <div class="priority high"><span>high priority</span></div>
+                    <div class="task high">
+                        <a href="#" class="a-color">
+                            <div class="desc">
+                                <div class="title">Lorem Ipsum</div>
+                                <div>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</div>
+                            </div>
+                        </a>
+                        
+                    </div>
+                    <div class="task high">
+                        <div class="desc">
+                            <div class="title">Lorem Ipsum</div>
+                            <div>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</div>
+                        </div>
+    
+                    </div>
+            
+                    <div class="priority medium"><span>medium priority</span></div>
+            
+                    <div class="task medium">
+                        <div class="desc">
+                            <div class="title">Lorem Ipsum</div>
+                            <div>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</div>
+                        </div>
+                    </div>
+            
+                    <div class="priority low"><span>low priority</span></div>
+            
+                    <div class="task low">
+                        <div class="desc">
+                            <div class="title">Lorem Ipsum</div>
+                            <div>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</div>
+                        </div>
+                    </div>
+                    <div class="task low">
+                        <div class="desc">
+                            <div class="title">Lorem Ipsum</div>
+                            <div>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</div>
+                        </div>
+                    </div>
+                    <div class="clearfix"></div>		
+                </div>		
+            </div>
+            </div>
+    </div>
     <!-- MAIN -->
-      <div class="col p-4">
-        <h2>Working Project</h2>
-        <div class="card mb-3 w-50">
-          <div class="card-body">
-            <h4 class="card-title">Project 1</h4>
-            <p> Your Task: 0/2</p>
-            <p >Your To-do: 2/3</p>
-            <button type="button" class="btn btn-warning">In-Prosess</button>
-            <a href="project-details.html" class="btn btn-primary">Detail</a>
-          </div>
-        </div>
-        <div class="card mb-3 w-50">
-          <div class="card-body">
-            <h4 class="card-title">Project 2</h4>
-            <p> Your Task: 2/2</p>
-            <p >Your To-do: 6/6</p>
-            <button type="button" class="btn btn-success">Done</button>
-            <a href="project-details.html" class="btn btn-primary">Detail</a>
-          </div>
-        </div>
-      </div><!-- Main Col END -->
+<!-- Main Col END -->
   </div><!-- body-row END -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <script src="/main.js"></script>  
+
 </body>
 </html>
