--- a/template/test.html
+++ b/template/test.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -10,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/test.css">
-    <link rel="stylesheet" href="/project-details.css">
+    <!-- <link rel="stylesheet" href="/project-details.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <!-- <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css"> -->
 </head>
@@ -101,70 +100,38 @@
           
           <main class="content-wrapper">
             <div class="container-fluid">
-              <div class="container m-4">
-                <h1 >Project's Name</h1>
-                <div class="page-todo bootstrap snippets bootdeys">
-                    <div class="col tasks">
-                        <div class="task-list">
-                            <h3>Tasks of this project</h3>
-                            <div class="priority high"><span>high priority</span></div>
-                            <div class="task high">
-                                <a href="#" class="a-color">
-                                    <div class="desc">
-                                        <div class="title">Lorem Ipsum</div>
-                                        <div>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</div>
-                                    </div>
-                                </a>
-                                
-                            </div>
-                            <div class="task high">
-                              <a href="#" class="a-color">
-                                <div class="desc">
-                                  <div class="title">Lorem Ipsum</div>
-                                  <div>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</div>
-                              </div>
-                              </a>
-
-                            </div>
-                    
-                            <div class="priority medium"><span>medium priority</span></div>
-                    
-                            <div class="task medium">
-                              <a href="#" class="a-color">
-                                <div class="desc">
-                                  <div class="title">Lorem Ipsum</div>
-                                  <div>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</div>
-                              </div>
-                              </a>
-                            </div>
-                    
-                            <div class="priority low"><span>low priority</span></div>
-                    
-                            <div class="task low">
-                              <a href="#" class="a-color">
-                                <div class="desc">
-                                  <div class="title">Lorem Ipsum</div>
-                                  <div>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</div>
-                              </div>
-                              </a>
-
-                            </div>
-                            <div class="task low">
-                              <a href="#" class="a-color">
-                                <div class="desc">
-                                  <div class="title">Lorem Ipsum</div>
-                                  <div>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</div>
-                              </div>
-                              </a>
-
-                            </div>
-                            <div class="clearfix"></div>		
-                        </div>		
-                    </div>
-                    </div>
-            </div>
+              <h1>Main Content</h1>
                   <!-- MAIN -->
-
+      <div class="col p-4">
+        <h2>Working Project</h2>
+        <div class="card mb-3 w-50">
+          <div class="card-body">
+            <h4 class="card-title">Project 1</h4>
+            <p> Your Task: 0/2</p>
+            <p >Your To-do: 2/3</p>
+            <button type="button" class="btn btn-warning">In-Prosess</button>
+            <a href="project-details.html" class="btn btn-primary">Detail</a>
+          </div>
+        </div>
+        <div class="card mb-3 w-50">
+          <div class="card-body">
+            <h4 class="card-title">Project 2</h4>
+            <p> Your Task: 2/2</p>
+            <p >Your To-do: 6/6</p>
+            <button type="button" class="btn btn-success">Done</button>
+            <a href="project-details.html" class="btn btn-primary">Detail</a>
+          </div>
+        </div>
+        <div class="card mb-3 w-50">
+          <div class="card-body">
+            <h4 class="card-title">Project 2</h4>
+            <p> Your Task: 2/2</p>
+            <p >Your To-do: 6/6</p>
+            <button type="button" class="btn btn-success">Done</button>
+            <a href="project-details.html" class="btn btn-primary">Detail</a>
+          </div>
+        </div>
+      </div><!-- Main Col END -->
             </div>
           </main>
           
@@ -183,3 +150,4 @@
         
     </body>
 </html>
+
