--- a/template/project-detail.html
+++ b/template/project-detail.html
@@ -87,46 +87,39 @@
 
         <div class="section-body">
             <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <ul class="nav nav-tabs page-header-tab">
-                                <li class="nav-item"><a class="nav-link" href="project-manager.html">Project List</a></li>
-                                <li class="nav-item"><a class="nav-link active" href="project-add.html">Add</a></li>
-                            </ul>
-                            <div class="header-action d-md-flex">
-                                <div class="input-group mr-2">
-                                    <input type="text" class="form-control" placeholder="Search...">
-                                </div>
-                            </div>
+                <h3>Project detail</h3>
+                <div class="btn-group" style="margin-top: 30px;">
+                    <button type="button" class="btn btn-primary">Add user</button>
+                    <button type="button" class="btn btn-primary">Edit</button>
+                    <button type="button" class="btn btn-danger">Delete</button>
+                </div>
+                <div class="col-6">
+                    <div class="row">
+                        <div class="col-6 py-1"><strong>Created:</strong></div>
+                        <div class="col-6 py-1">09 Jun 2019 11:32AM</div>
+                        <div class="col-6 py-1"><strong>Creator:</strong></div>
+                        <div class="col-6 py-1">Nathan Guerrero</div>
+                        <div class="col-6 py-1"><strong>Task:</strong></div>
+                        <div class="col-6 py-1"><strong>23</strong></div>
+                        <div class="col-6 py-1"><strong>Todo:</strong></div>
+                        <div class="col-6 py-1"><strong>32</strong></div>
+                        <div class="col-6 py-1"><strong>Bug:</strong></div>
+                        <div class="col-6 py-1"><strong>5</strong></div>
+                        <div class="col-6 py-1"><strong>Team size:</strong></div>
+                        <div class="col-6 py-1">
+                            <span class="avatar avatar-sm">+8</span>
                         </div>
+                        <div class="col-6 py-1"><strong>Members:</strong></div>
+                        <div class="col-6 py-1"><strong>Lương, Tuyên</strong></div>
+                        <div class="col-6 py-1"><strong>Status</strong></div>
+                        <div class="col-6 py-1"><strong><span class="badge badge-success">Done</span></strong></div>
                     </div>
                 </div>
+
+                
             </div>
         </div>
 
-
-        <div class="tab-pane" id="Project-add" role="tabpanel">
-            <div class="container-fluid">
-                <h1 style="margin-top: 50px;">Create Project</h1>
-                <form>
-                    <div class="form-group">
-                      <label for="name">Name project</label>
-                      <input type="text" class="form-control" id="nameProjectInput" placeholder="Name">
-                    </div>
-                    <div class="form-group">
-                      <label for="description">Description</label>
-                      <textarea class="form-control" id="descriptionProjectInput" rows="3" placeholder="Description project"></textarea>
-                    </div>
-                    <div class="form-check">
-                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                      <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                  </form>
-            </div>
-            
-        </div>
 
         <!-- MAIN -->
 
