--- a/template/admin-final/myacount.css
+++ b/template/admin-final/myacount.css
@@ -53,9 +53,14 @@ body {
 
 .card {
     background: #ffffff;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
+    webkit-border-radius: 5px;
+    moz-border-radius: 5px;
     border-radius: 5px;
     border: 0;
     margin-bottom: 1rem;
+}
+
+.content{
+    position: absolute;
+    left: 225px;
 }
