--- a/template/admin-final/project-add.html
+++ b/template/admin-final/project-add.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="project-manager.css">
     <!-- <link rel="stylesheet" href="/project-details.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
@@ -19,69 +19,49 @@
 <html>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
+      <!-- main menu -->
+      <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
         <a class="navbar-brand" href="#">Project Manager</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav mr-auto sidenav" id="navAccordion">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Item 1</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link nav-link-collapse" href="#" id="hasSubItems" data-toggle="collapse"
-                        data-target="#collapseSubItems2" aria-controls="collapseSubItems2" aria-expanded="false">User
+        <div class="collapse navbar-collapse " id="navbarCollapse">
+            <ul class="navbar-nav mr-auto sidenav sidebarnav" id="navAccordion">
+
+                <li class="nav-item sidebar-item">
+                    <a class="nav-link " href="user-manager.html">User
                         Manager </a>
-                    <ul class="nav-second-level collapse" id="collapseSubItems2" data-parent="#navAccordion">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <span class="nav-link-text">Add</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <span class="nav-link-text">Manager</span>
-                            </a>
-                        </li>
-                    </ul>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link nav-link-collapse" href="#" id="hasSubItems" data-toggle="collapse"
-                        data-target="#collapseSubItems4" aria-controls="collapseSubItems4" aria-expanded="false">Project
+                <li class="nav-item sidebar-item">
+                    <a class="nav-link " href="project-manager.html">Project
                         Manager</a>
-                    <ul class="nav-second-level collapse" id="collapseSubItems4" data-parent="#navAccordion">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <span class="nav-link-text">Add</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                <span class="nav-link-text">Manager</span>
-                            </a>
-                        </li>
-                    </ul>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">My Project</a>
+                <!-- user?? -->
+                <li class="nav-item sidebar-item">
+                    <a class="nav-link" href="project-manager.html">My Project</a>
                 </li>
+                <li class="nav-item sidebar-item">
+                    <a class="nav-link" href="project-details.html">My Task</a>
+                </li>
+                <li class="nav-item sidebar-item">
+                    <a class="nav-link" href="to-do-details.html">My Todo</a>
+                </li>
+                <!--  -->
             </ul>
-            <form class="form-inline ml-auto mt-2 mt-md-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-            <button type="button" class="btn btn-primary">My Account</button>
-            <button type="button" class="btn btn-primary">Login</button>
-            <button type="button" class="btn btn-primary">Logout</button>
+            <div class="group-btn">
+                
+                <a href="myacount.html" class="btn btn-primary">Account</a>
+                <a href="login.html" class="btn btn-primary">Login</a>
+
+                <button type="button" class="btn btn-primary">Logout</button>
+            </div>
+
 
         </div>
     </nav>
+    <!-- end main menu -->
 
     <main class="content-wrapper">
 
