--- a/template/admin-final/project-manager.html
+++ b/template/admin-final/project-manager.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="test.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="project-manager.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <link rel="stylesheet"
@@ -23,8 +23,8 @@
 <html>
 
 <body>
-    <!-- main menu -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
+      <!-- main menu -->
+      <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
         <a class="navbar-brand" href="#">Project Manager</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,8 +55,10 @@
                 <!--  -->
             </ul>
             <div class="group-btn">
-                <button type="button" class="btn btn-primary">My Account</button>
-                <button type="button" class="btn btn-primary">Login</button>
+                
+                <a href="myacount.html" class="btn btn-primary">Account</a>
+                <a href="login.html" class="btn btn-primary">Login</a>
+
                 <button type="button" class="btn btn-primary">Logout</button>
             </div>
 
