--- a/template/user-final/project-details.html
+++ b/template/user-final/project-details.html
@@ -19,9 +19,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="test.css">
-  <!-- <link rel="stylesheet" href="/project-details.css"> -->
-  <link rel="stylesheet" href="test-task-list.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="task-list.css">
   <link rel="stylesheet" href="project-manager.css">
 
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"> -->
@@ -30,7 +29,7 @@
 <html>
 
 <body>
-  <!--Navbar  -->
+  <!-- main menu -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
     <a class="navbar-brand" href="#">Project Manager</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
@@ -38,72 +37,52 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="navbar-nav mr-auto sidenav" id="navAccordion">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+    <div class="collapse navbar-collapse " id="navbarCollapse">
+      <ul class="navbar-nav mr-auto sidenav sidebarnav" id="navAccordion">
+
+        <!-- <li class="nav-item sidebar-item">
+                    <a class="nav-link " href="user-manager.html">User
+                        Manager </a>
+                </li>
+                <li class="nav-item sidebar-item">
+                    <a class="nav-link " href="project-manager.html">Project
+                        Manager</a>
+                </li> -->
+        <!-- user?? -->
+        <li class="nav-item sidebar-item">
+          <a class="nav-link" href="project-manager.html">My Project</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Item 1</a>
+        <li class="nav-item sidebar-item">
+          <a class="nav-link" href="project-details.html">My Task</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link nav-link-collapse" href="#" id="hasSubItems" data-toggle="collapse"
-            data-target="#collapseSubItems2" aria-controls="collapseSubItems2" aria-expanded="false">User Manager </a>
-          <ul class="nav-second-level collapse" id="collapseSubItems2" data-parent="#navAccordion">
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span class="nav-link-text">Add</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span class="nav-link-text">Manager</span>
-              </a>
-            </li>
-          </ul>
+        <li class="nav-item sidebar-item">
+          <a class="nav-link" href="to-do-details.html">My Todo</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link nav-link-collapse" href="#" id="hasSubItems" data-toggle="collapse"
-            data-target="#collapseSubItems4" aria-controls="collapseSubItems4" aria-expanded="false">Project Manager</a>
-          <ul class="nav-second-level collapse" id="collapseSubItems4" data-parent="#navAccordion">
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span class="nav-link-text">Add</span>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">
-                <span class="nav-link-text">Manager</span>
-              </a>
-            </li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">My Project</a>
-        </li>
+        <!--  -->
       </ul>
-      <form class="form-inline ml-auto mt-2 mt-md-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
-      <button type="button" class="btn btn-primary">My Account</button>
-      <button type="button" class="btn btn-primary">Login</button>
-      <button type="button" class="btn btn-primary">Logout</button>
+      <div class="group-btn">
+
+        <a href="myacount.html" class="btn btn-primary">Account</a>
+        <a href="login.html" class="btn btn-primary">Login</a>
+
+        <button type="button" class="btn btn-primary">Logout</button>
+      </div>
+
 
     </div>
   </nav>
-  <!-- end Navbar -->
+  <!-- end main menu -->
   <!-- Main -->
   <main class="content-wrapper">
 
     <div class="section-body">
       <div class="container p-30">
         <h1>Project Name</h1>
-        <div class="btn-group" style="margin-top: 30px;">
-          <button type="button" class="btn btn-success">Add user</button>
-          <button type="button" class="btn btn-primary ">Edit</button>
+        <!-- <div class="group-btn" style="margin-top: 30px;">
+          <a href="add-user-to-project.html" class="btn btn-success ">Add user</a>
+          <button type="button" class="btn btn-primary " data-toggle="modal" data-target="#new-project">Edit</button>
           <button type="button" class="btn btn-danger ">Delete</button>
-        </div>
+        </div> -->
         <div class="col-6">
           <div class="row">
             <div class="col-6 py-1"><strong>Created:</strong></div>
@@ -146,7 +125,7 @@
             <div class="task-list">Task List</div>
             <div class="row d-flex">
               <div class="col-sm-4 createSegment">
-                <a class="btn dim_button create_new"> <span class="glyphicon glyphicon-plus"></span>New Task</a>
+                <!-- <a class="btn dim_button create_new"> <span class="glyphicon glyphicon-plus"></span>New Task</a> -->
               </div>
               <div class="col-sm-8 add_flex">
                 <div class="form-group searchInput">
@@ -243,7 +222,8 @@
       </div>
     </div>
   </main>
-  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -253,65 +233,64 @@
           </button>
         </div>
         <div class="modal-body">
-            <div class="form-group row">
-                <label for="inputName" class="col-sm-3 col-form-label">Todo Name<span
-                        class="text-danger">*</span></label>
-                <div class="col-sm-9">
-                    <input type="Text" class="form-control" id="inputName" placeholder="Name">
-                </div>
+          <div class="form-group row">
+            <label for="inputName" class="col-sm-3 col-form-label">Todo Name<span class="text-danger">*</span></label>
+            <div class="col-sm-9">
+              <input type="Text" class="form-control" id="inputName" placeholder="Name">
             </div>
-            <div class="form-group row">
-                <label class="col-md-3 col-form-label">Due <span class="text-danger">*</span></label>
-                <div class="col-md-9" style="display: flex;">
-                    <input type="text" class="form-control datepicker" name="date" value="" >
-                    
-                    <span style="padding: 10px;">To</span>
-                    <input type="text" class="form-control datepicker" name="date" value="" >
-                   
-                </div>
+          </div>
+          <div class="form-group row">
+            <label class="col-md-3 col-form-label">Due <span class="text-danger">*</span></label>
+            <div class="col-md-9" style="display: flex;">
+              <input type="text" class="form-control datepicker" name="date" value="">
+
+              <span style="padding: 10px;">To</span>
+              <input type="text" class="form-control datepicker" name="date" value="">
+
             </div>
-            <div class="form-group row">
-                <label for="exampleFormControlSelect1" class="col-sm-3 col-form-label">Priority<span
-                        class="text-danger">*</span></label>
-                <div class="col-sm-9">
-                    <select class="form-control" id="exampleFormControlSelect1">
-                        <option>High</option>
-                        <option>Normal</option>
-                        <option>Low</option>
-                    </select>
-                </div>
+          </div>
+          <div class="form-group row">
+            <label for="exampleFormControlSelect1" class="col-sm-3 col-form-label">Priority<span
+                class="text-danger">*</span></label>
+            <div class="col-sm-9">
+              <select class="form-control" id="exampleFormControlSelect1">
+                <option>High</option>
+                <option>Normal</option>
+                <option>Low</option>
+              </select>
             </div>
-            <div class="form-group row">
-                <label class="col-md-3 col-form-label">Description <span class="text-danger">*</span></label>
-                <div class="col-md-9">
-                    <textarea rows="4" class="form-control no-resize" placeholder="Descriptions"></textarea>
-                </div>
+          </div>
+          <div class="form-group row">
+            <label class="col-md-3 col-form-label">Description <span class="text-danger">*</span></label>
+            <div class="col-md-9">
+              <textarea rows="4" class="form-control no-resize" placeholder="Descriptions"></textarea>
             </div>
-            <div class="form-group row">
-                <label class="col-md-3 col-form-label">
-                    Assign for<span class="text-danger">*</span></label>
-                </label>
-                <div class="col-md-9">
-                    <select class="selectpicker" data-live-search="true" title="Select User">
-                        
-                        <option data-tokens="">User1</option>
-                        <option data-tokens="">User2</option>
-                        <option data-tokens="">User3</option>
-                      </select>
-                </div>
+          </div>
+          <div class="form-group row">
+            <label class="col-md-3 col-form-label">
+              Assign for<span class="text-danger">*</span></label>
+            </label>
+            <div class="col-md-9">
+              <select class="selectpicker" data-live-search="true" title="Select User">
+
+                <option data-tokens="">User1</option>
+                <option data-tokens="">User2</option>
+                <option data-tokens="">User3</option>
+              </select>
             </div>
-            <div class="form-group row">
-                <label class="col-md-3 col-form-label">
-                    Status<span class="text-danger">*</span></label>
-                </label>
-                <div class="col-md-7">
-                    <select class="selectpicker"  title="Select Status">
-                        <option data-tokens="">Working</option>
-                        <option data-tokens="">On-Reviewing</option>
-                        <option data-tokens="">Done</option>
-                      </select>
-                </div>
+          </div>
+          <div class="form-group row">
+            <label class="col-md-3 col-form-label">
+              Status<span class="text-danger">*</span></label>
+            </label>
+            <div class="col-md-7">
+              <select class="selectpicker" title="Select Status">
+                <option data-tokens="">Working</option>
+                <option data-tokens="">On-Reviewing</option>
+                <option data-tokens="">Done</option>
+              </select>
             </div>
+          </div>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -320,6 +299,62 @@
       </div>
     </div>
   </div>
+  <!-- modal project-->
+  <div class="modal fade" id="new-project" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Add project</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="form-group row">
+            <label for="inputName" class="col-sm-3 col-form-label">Project Name<span
+                class="text-danger">*</span></label>
+            <div class="col-sm-9">
+              <input type="Text" class="form-control" id="inputName" placeholder="Name">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label class="col-md-3 col-form-label">Due <span class="text-danger">*</span></label>
+            <div class="col-md-9" style="display: flex;">
+              <input type="text" class="form-control datepicker" name="date" value="">
+
+              <span style="padding: 10px;">To</span>
+              <input type="text" class="form-control datepicker" name="date" value="">
+
+            </div>
+          </div>
+          <div class="form-group row">
+            <label class="col-md-3 col-form-label">Description <span class="text-danger">*</span></label>
+            <div class="col-md-9">
+              <textarea rows="4" class="form-control no-resize" placeholder="Descriptions"></textarea>
+            </div>
+          </div>
+          <div class="form-group row">
+            <label class="col-md-3 col-form-label">
+              Status<span class="text-danger">*</span></label>
+            </label>
+            <div class="col-md-7">
+              <select class="selectpicker" title="Select Status">
+                <option data-tokens="">Working</option>
+                <option data-tokens="">On-Reviewing</option>
+                <option data-tokens="">Done</option>
+              </select>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Add</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- modal project END-->
   <!-- ENd Main -->
   <!-- Footter -->
   <footer class="footer">
